# tinyimg

./: README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  constants.ts  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: settings.default.json
src-tauri/src/: fs.rs  lib.rs
src-tauri/src/file_ext/: finder.rs
src/components/: ImageTransition.tsx  error-boundary.tsx  fullscreen-progress.tsx
src/components/data-table/: index.tsx
src/components/guide/: index.tsx
src/components/image-comparison/: index.css  index.tsx
src/components/img-tag/: index.tsx
src/components/layouts/: app-layout.tsx  sidebar-nav.tsx
src/components/setting/: header.tsx  index.tsx
src/components/setting-panel/: index.tsx
src/components/setting/general/: index.tsx  tinypng.tsx
src/components/ui/: card.tsx
src/components/workspace/: index.tsx
src/i18n/: index.ts
src/i18n/locales/: en-US.json  en-US.ts  zh-CN.json  zh-CN.ts
src/pages/compression/: actions-button.tsx  classic.tsx  file-card.tsx  file-detail.tsx  file-explorer.tsx  file-manager.tsx  file-preview.tsx  guide.tsx  index.tsx  process-file.tsx  select-file.tsx  tasks-list-item.tsx  tasks-list.tsx  toolbar-compress.tsx  toolbar-exit.tsx  toolbar-info.tsx  toolbar-pagination.tsx  toolbar-reset.tsx  toolbar-select.tsx  toolbar.tsx
src/pages/home/: index.tsx
src/pages/settings/: header.tsx  index.tsx  sidebar-nav.tsx
src/pages/settings/compression/: index.tsx  metadata.tsx  task-config.tsx  (+5 more)
src/store/: app.store.ts  compression.ts  settings.ts
src/types/: global.d.ts
src/utils/: compressor.ts  fs.ts  index.ts  menu.ts  processor.ts  scheduler.ts  tinify.ts
(+7 files in other folders)
