[package]
name = "PicSharp"
version = "0.0.1"
description = "Swiss Army Knife: image compression, format conversion, oss storage"
authors = ["JaylenL"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_learn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
glob = "0.3.1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-upload = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
log = "0.4"
tauri-plugin-clipboard-manager = "2.2.1"

[build]
rustc-wrapper = "~/.cargo/bin/sccache"

# TODO: cleanup features on objc2 crates
[target.'cfg(target_os = "macos")'.dependencies]
objc2-uniform-type-identifiers = { version = "0.2.0", features = [
  "UTCoreTypes",
  "UTType",
] }
objc2-app-kit = { version = "0.2.0", features = [
  "NSApplication",
  "NSResponder",
  "NSPasteboard",
] }
objc2-foundation = { version = "0.2.0", features = [
  "NSExtensionRequestHandling",
  "NSExtensionContext",
  "NSExtensionItem",
  "NSArray",
  "NSItemProvider",
  "NSDictionary",
  "NSError",
  "NSObject",
  "NSString",
  "block2",
  "NSThread",
  "dispatch",
  "NSRunLoop",
] }
objc2 = "0.5.1"
